# Rust_Lessons

./: Cargo.toml  README.md
.github/workflows/: ci.yml
lesson_01_hello_world/: Cargo.toml  README.md
lesson_01_hello_world/src/: exercises.rs  main.rs  solutions.rs
lesson_02_variables_types/: Cargo.toml  README.md
lesson_02_variables_types/src/: exercises.rs  main.rs  solutions.rs
lesson_03_ownership_borrowing/: Cargo.toml  README.md
lesson_03_ownership_borrowing/src/: exercises.rs  main.rs  solutions.rs
lesson_04_functions_control_flow/: Cargo.toml  README.md
lesson_04_functions_control_flow/src/: exercises.rs  main.rs  solutions.rs
lesson_05_structs_methods/: Cargo.toml  README.md
lesson_05_structs_methods/src/: exercises.rs  main.rs  solutions.rs
lesson_06_enums_pattern_matching/: Cargo.toml  README.md
lesson_06_enums_pattern_matching/src/: exercises.rs  main.rs  solutions.rs
lesson_07_collections/: Cargo.toml  README.md
lesson_07_collections/src/: exercises.rs  main.rs  solutions.rs
lesson_08_traits_generics/: Cargo.toml  README.md
lesson_08_traits_generics/src/: exercises.rs  main.rs  solutions.rs
lesson_09_closures_iterators/: Cargo.toml  README.md
lesson_09_closures_iterators/src/: exercises.rs  main.rs  solutions.rs
lesson_10_error_handling/: Cargo.toml  README.md
lesson_10_error_handling/src/: exercises.rs  main.rs  solutions.rs
